tests/snapshots/integration__integration_tests__step_prune__prune_dry_run_json_current_worktree.snap
---
source: tests/integration_tests/step_prune.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "current-merged",
    "branch_deleted": true,
    "kind": "current",
    "path": "<PATH>",
    "reason": "same commit as",
    "target": "main"
  }
]
