tests/snapshots/integration__integration_tests__step_prune__prune_json_actual_removal.snap
---
source: tests/integration_tests/step_prune.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "merged-a",
    "branch_deleted": true,
    "kind": "worktree",
    "path": "<PATH>"
  }
]
