tests/snapshots/integration__integration_tests__step_prune__prune_json_orphan_branch.snap
---
source: tests/integration_tests/step_prune.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "orphan-integrated",
    "branch_deleted": true,
    "kind": "branch_only",
    "path": null
  }
]
